<resources>
    <string name="app_name">EmpFiTrack</string>
    <string name="title_home">Home</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_notifications">Profile</string>
    <string name="welcome_to_empfitrack">Welcome To EmpFiTrack</string>
    <string name="remember_me">Remember me</string>
    <string name="checkbox">CheckBox</string>
    <string name="login">LOGIN</string>
    <string name="setreminder">Set Reminder</string>
    <string name="EMPLOYEEID">EMPLOYEE ID</string>
    <string name="logout">Log Out</string>
    <string name="password">PASSWORD</string>
</resources>